java version updated in pom file